--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=hub
+spring.datasource.url=jdbc:mysql://localhost/forohub
+spring.datasource.username=root
+spring.datasource.password=admin123
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
